ubiquity-slideshow-ubuntu (33) UNRELEASED; urgency=low

  [ Dylan McCall ]
  * New strings for Ubuntu slideshow.

  [ Evan Dandrea ]
  * Fix symlinks for the oem-config-ubuntu slideshow.

 -- Evan Dandrea <evan@daisy>  Thu, 03 Mar 2011 10:57:29 +0000

ubiquity-slideshow-ubuntu (32) natty; urgency=low

  * Add oem-config-ubuntu slideshow.

 -- Evan Dandrea <ev@ubuntu.com>  Fri, 11 Feb 2011 15:29:49 +0000

ubiquity-slideshow-ubuntu (31) natty; urgency=low

  [ Dylan McCall ]
  * Improve kerning in Ubuntu slideshow (LP: #688512)

  [ Jonathan Carter ]
  * Update Edubuntu slides

  [ Mackenzie Morgan ]
  * Fix typo in Kubuntu slides (LP: #714668)

  [ Evan Dandrea ]
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Fri, 11 Feb 2011 14:02:53 +0000

ubiquity-slideshow-ubuntu (30) natty; urgency=low

  * Bump version numbers to 11.04.  Many slides still need to be rewritten
    (LP: #683999)
  * Changing OpenOffice.org to LibreOffice in all variants
    (LP: #692879, #712548)
  * POT files updated

 -- Marco Biscaro <marcobiscaro2112@gmail.com>  Mon, 07 Feb 2011 08:34:09 -0200

ubiquity-slideshow-ubuntu (29) natty; urgency=low

  * Add Edubuntu slideshow
  * Update standards version to 3.9.1

 -- Jonathan Carter <jonathan@ubuntu.com>  Thu, 04 Nov 2010 14:28:36 -0400

ubiquity-slideshow-ubuntu (28) maverick; urgency=low

  [ Dylan McCall ]
  * Prefer 'Ubuntu' font family instead of 'UbuntuBeta' (LP: #652047).

  [ Colin Watson ]
  * Update translations from Launchpad, including adding Norwegian Bokmål
    and Nynorsk (LP: #652395).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Oct 2010 11:03:28 +0100

ubiquity-slideshow-ubuntu (27) maverick; urgency=low

  * Freeze exception (LP: #649597).
  * Updated screenshots from the Ubuntu 10.10 desktop tour.  Thanks
    Dylan McCall and Mat Tomaszewski.
  * Fix update-launchpad-translations to cope with no-longer-existant
    slideshows.
  * Update translations from Launchpad.