@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>Lubuntu comes with <em>Abiword and Gnumeric</em>, lightweight alternatives for LibreOffice.</li>
 	<li>You can create and edit documents like spreadsheets and letters.</li>
@@ -11,4 +13,6 @@
 
 </div>
 
-<img class="icon" src="icons/office.png" alt="" />
+<img class="screenshot" src="icons/office.png"/>
+
+</div>
