@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>Lubuntu is shipped with <em>Chromium</em>, the open-source version of Chrome, a browser developed by Google.</li>
 	<li>It's fast with a clean user interface.</li>
@@ -11,4 +13,6 @@
 
 </div>
 
-<img class="icon" src="icons/chromium.png" alt="" />
+<img class="screenshot" src="icons/chromium.png" />
+
+</div>
