@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>You will be able to watch videos with <em>gnome-mplayer</em>, a fast video player using mplayer.</li>
 	<li>Support for many formats is included.</li>
@@ -12,4 +14,6 @@
 
 </div>
 
-<img class="icon" src="icons/gnome-mplayer.png" alt="" />
+<img class="screenshot" src="icons/gnome-mplayer.png"/>
+
+</div>
