@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>If you need help, you can contact us:</li>
 	<li><!-- The url should not be translated -->Using the <a href="https://wiki.ubuntu.com/Lubuntu/ContactUs">wiki page</a>.</li>
@@ -12,4 +14,6 @@
 <p class="footer">The installation will finish soon. We hope you enjoy Lubuntu.</p></div>
 </div>
 
-<img class="icon" src="icons/help.png" alt="" />
+<img class="screenshot" src="icons/help.png"/>
+
+</div>
