@@ -14,8 +14,8 @@
 	<script type="text/javascript" src="directory.js"></script>
 	<script type="text/javascript">
 		SLIDESHOW_OPTIONS = {
-			fx:'fade',
-			speed:300,
+			timeout:50000,
+			speed:600,
 		}
 	</script>
 	<script type="text/javascript" src="link-core/slideshow.js"></script>
@@ -35,9 +35,10 @@
 	<div><a href="help.html" class="load"></a></div>
 </div>
 
-<div id="debug-controls">
-<input type="button" id="prev-slide" value="&lt;"/>
-<input type="button" id="next-slide" value="&gt;"/>
+<div id="controls">
+<a class="control-arrow" id="prev-slide"></a>
+<a class="control-arrow" id="next-slide"></a>
+<input type="hidden" id="current-slide" />
 </div>
 
 </body>
