@@ -1,11 +1,46 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size: 100%;
+	font-style:normal;
+	text-decoration:none;
+	font-weight:normal;
+	vertical-align:baseline;
+	background:transparent;
+}
+ol, ul {
+	list-style:none;
+}
+
+
+
 html, body {
 	margin:0;
 	padding:0;
 	
-	background-color:#F0F2F4;
+	background-color:#F7F6F6;
 	
-	font-family:sans-serif;
-	color:#000000;
+	font-family:'Ubuntu', 'UbuntuBeta', sans-serif;
+	font-size:12px;
+	line-height:1.4em;
+	
+	color:#333333;
+	
+	/* no reason to expose this extra stuff to the user */
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	user-select:none;
+	cursor:default;
 }
 
 /*
@@ -13,25 +48,19 @@ Hyperlink-style text
 */
 a {
 	color:#731444;
-	font-style:italic;
+    font-style:italic;
 	text-decoration:none;
+	display:inline;
 }
 
 #slideshow {
 	position:absolute;
 	
-	width:798px;
-	height:451px;
+	width:752px;
+	min-height:442px;
+	height:100%;
 	
 	overflow:hidden;
-	
-	background-image:url('background.png');
-	background-repeat:no-repeat;
-	background-position:top right;
-	
-	background-color:#F0F2F4;
-	
-	/*cursor:default;*/
 }
 #slideshow > div {
 	position:absolute;
@@ -39,145 +68,141 @@ a {
 	height:100%;
 }
 
-#debug-controls {
-	display:none;
-	position:absolute;
-	top:470px;
-	width:798px;
-	text-align:center;
-}
-#debug-controls input {
-	width:40px;
-}
-
-.header {
-	position:absolute; /* use position:fixed to keep still with sliding transition effect */
-	top:0px;
-	height:176px;
-}
-
-/* title block is positioned at the bottom of its parent, which should be .header */
-.title {
+.control-arrow {
+	display:block;
 	position:absolute;
 	
-	bottom:12px;
-	width:385px; /* the ideal width would leave more space on the right */
-	left:36px; /* matches padding of .content and .content ul: 16 + 20 */
+	z-index:100;
+	top:218px;
+	height:64px;
+	width:33px;
+	
+	background-repeat:no-repeat;
+	cursor:pointer;
+}
+.control-arrow:hover {
+	background-position: 0px -65px;
+}
+.control-arrow:active {
+	background-position: 0px -130px;
+}
+.control-arrow#prev-slide {
+	background-image:url('arrow-back.png');
+	left:0px;
+}
+.control-arrow#next-slide {
+	background-image:url('arrow-next.png');
+	left:719px; /* 752px - 33px */
+}
+
+/* Fixed container for a slide's title */
+.header {
+	display:table; /* this is a bit evil, but it lets us vertically centre stuff */
+	position:absolute;
+	/* FIXME: better to use position:relative here and for #main.
+	   Need to have a specific maximum height, though,
+	   which isn't working with display:table */
+	top:0px;
+	width:100%;
+	height:68px;
+	background-color:#3C3B37;
+}
+
+.header > .slidetitle {
+	display:table-cell;
+	/*margin:10px 25px 10px 25px;*/
+	padding:0px 25px;
+	vertical-align:middle;
 	
 	font-size:20px; /* applies to all lines except first */
+	line-height:1em;
 	font-weight:normal;
-	
-	letter-spacing:-1px;
-	
-	color:#ffffff;
-	
-	padding:0px;
-	margin:0px;
+	color:#DED9CB;
 }
-.title:first-line {
-	font-size:28px;
+.slidetitle:first-line {
+	font-size:36px; /* TODO: 24px? */
+	line-height:32px;
 }
 
-/*
-Typically an image. This is positioned at the top right of a slide.
-Icons should be 215x156 pixels tall, though some can overflow with a height
-of 215px. The actual content should be 128x128px. (The rest is padding).
-*/
-.icon {
-	position:absolute; /* use position:fixed to keep still with sliding transition effect */
-	
-	top:20px;
-	left:549px;
-	width:215px;
-	height:auto;
-	
-	z-index:11;
-	border:0px;
-}
-.icon#firefox {
-	top:47px;
-	left:590px;
-	width:128px;
-	height:auto;
-}
-
-/*
-.content expects to be contained in here. .main
-creates a nice, plain surface upon which it can
-appear, spaced appropriately from .title.
-*/
 .main {
 	position:absolute;
+	top:70px; /* 68px + 2px margin */
+	bottom:2px;
+	left:2px;
+	right:2px;
+	min-height:370px; /* 442px (from #slideshow) - 70px - 2px */
 	
-	top:163px;
-	left:0px;
-	
-	width:100%;
-	height:288px;
-	
-	padding-right:60px;
-	
-	z-index:12;
+	/* move this to #slideshow if we don't want the background image to move with slides */
+	background-image:url('background.png');
 }
 
 /*
-Slide's body text goes inside here.
+A slide's body text goes inside here.
+Inner space is 224px wide.
 */
-.content {
-	padding:16px;
-	padding-top:32px;
-	
-	font-size:14px;
-	color:#484848;
-}
-
-.content ul {
-	margin-top:0px;
-	padding-left:20px;
-	
-	width:726px; /* was 650px */
-	height:223px;
-
-	line-height:1.4em;
-	
+.main > .text {
+	position:absolute;
+	top:25px;
+	left:36px;
+	width:248px;
+	bottom:35px;
+	min-height:329px; /* 369 - 25 - 15 (for bottom) */
 	overflow:auto;
+}
+
+.text > div {
+	margin-bottom:8px;
+	padding:6px 12px;
+	background-color:#F7F6F6;
+}
+.text > div:last-child {
+	margin-bottom:0px;
+}
+
+.text > div > .subtitle {
+	padding-bottom:2px;
+	margin-bottom:5px;
+	font-size:inherit;
+	font-weight:normal;
+	text-decoration:none;
+	border-bottom:#333333 dotted 1px;
+}
+
+.featured ul {
+	display:table;
+}
+.featured li {
+	display:table-row;
+}
+.featured li > * {
+	padding-bottom:12px;
+}
+.featured li .icon {
+	display:table-cell;
+	width:24px;
+	height:auto;
+	padding-right:12px;
+}
+.featured li .caption {
+	display:table-cell;
+	vertical-align:middle;
+}
+
+.main > .screenshot {
+	position:absolute;
+	top:25px;
+	right:-2px; /* offsets 2px margin of .main */
 	
-	list-style-type:none;
-	list-style-image:url("bullet-point.png");
-}
-
-.content li {
-	padding:8px;
-	padding-left:0px;
-}
-/* hack to get the text wrapping around the icon. If we could do this for
-ul :first-line, there would be less room for failure. */
-.content.wrap-top li:first-child {
-	width:550px;
-}
-
-.content .footer {
-	position:relative;
-	width:100%;
-	padding:0px;
-	margin:0px;
-	bottom:10px;
-	text-align:right;
-	
-	font-weight:bold;
-	color:#333333;
-}
-
-.content img.inline {
-	height:14px;
-	width:auto;
+	-webkit-box-shadow:#999999 0px 0px 5px;
+	-moz-box-shadow:#999999 0px 0px 5px;
+	box-shadow:#999999 0px 0px 5px;
 }
 
 /*
 This rule disables drag-and-drop for images.  See bug #448703.
 */
 img {
- 	-webkit-user-drag: none;
+ 	-webkit-user-drag:none;
 }
 
 
@@ -186,29 +211,28 @@ img {
 .rtl {
 	direction:rtl;
 }
-.rtl #container {
-	background-image:url('background.rtl.png');
-	background-repeat:no-repeat;
-	background-position:top left;
+
+.rtl .control-arrow#prev-slide {
+	background-image:url('arrow-next.png');
+	left:719px;
 }
-/* TODO: NEED reversed title and icon for RTL */
-.rtl .title {
-	left:377px;
+.rtl .control-arrow#next-slide {
+	background-image:url('arrow-back.png');
+	left:0px; /* 752px - 33px */
 }
-.rtl .icon {
-	/* FIXME: This is a horrible hack to keep the title from moving during slide transition */
-	position:fixed; /* was position:absolute */
-	
-	left:34px;
+
+.rtl .main > .text {
+	left:auto;
+	right:36px;
 }
-.rtl .icon#firefox {
-	left:80px;
+
+.rtl .main > .screenshot {
+	right:normal;
+	left:-2px;
 }
-.rtl .main {
-	right:0px;
+
+.rtl .featured li .icon {
 	padding-right:0px;
-	padding-left:60px;
+	padding-left:12px;
 }
-.rtl .content .footer {
-    text-align:left;
-}
+
