@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>Lubuntu is based on <em>LXDE Desktop Environment</em>, a fast-performing and energy-saving desktop environment.</li>
 	<li><!-- The url "lxde.org" should not be translated -->More information on the <a href="http://lxde.org">LXDE website</a>.</li>
@@ -10,4 +12,6 @@
 
 </div>
 
-<img class="icon" src="icons/lxde.png" alt="" />
+<img class="screenshot" src="icons/lxde.png" alt="" />
+
+</div>
