@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>With <em>Pidgin</em>, you will be able to chat with your friends.</li>
 	<li>Go to the menu, and click on Pidgin icon to connect to many Instant Message services, such as Jabber or Windows Live.</li>
@@ -11,4 +13,6 @@
 
 </div>
 
-<img class="icon" src="icons/pidgin.png" alt="" />
+<img class="screenshot" src="icons/pidgin.png"/>
+
+</div>
