@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>Lubuntu provides a mail client named <em>Sylpheed</em>.</li>
 	<li>It will allow you to check your email messages, and read them even if you are offline.</li>
@@ -11,4 +13,6 @@
 
 </div>
 
-<img class="icon" src="icons/sylpheed.png" alt="" />
+<img class="screenshot" src="icons/sylpheed.png"/>
+
+</div>
