@@ -2,6 +2,8 @@
 
 <div class="main">
 
+<div class="text">
+
 <div class="content wrap-top"><ul>
 	<li>With Lubuntu, you have access to the whole Ubuntu repository and all the software included.</li>
 	<li>Go to the menu, click on System Tools and <em>Synaptic Software Manager</em>.</li>
@@ -11,4 +13,6 @@
 
 </div>
 
-<img class="icon" src="icons/synaptic.png" alt="" />
+<img class="screenshot" src="icons/synaptic.png"/>
+
+</div>
