@@ -2,11 +2,20 @@
 
 <div class="main">
 
-<div class="content wrap-top"><ul>
-	<li>Thank you for choosing Lubuntu 11.04.</li>
-</ul>
+<div class="text">
+
+<div>
+
+<p>Thank you for choosing Lubuntu 11.04.</p>
+
+</div>
+
+<div>
+
 <p class="footer">Lubuntu is designed to be easy and fast. Feel free to explore!</p></div>
 
 </div>
 
-<img class="icon" src="icons/welcome.png" alt="" />
+<img class="screenshot" src="icons/welcome.png" />
+
+</div>
