@@ -6,7 +6,10 @@ ubiquity-slideshow-ubuntu (33) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Fix symlinks for the oem-config-ubuntu slideshow.
 
- -- Evan Dandrea <evan@daisy>  Thu, 03 Mar 2011 10:57:29 +0000
+  [ Julien Lavergne ]
+  * Update lubuntu layout to Ubuntu one (LP: #729197)
+
+ -- Julien Lavergne <gilir@ubuntu.com>  Sun, 06 Mar 2011 13:09:20 +0100
 
 ubiquity-slideshow-ubuntu (32) natty; urgency=low
 
